consul/enforce-min-tls-version/.chainsaw-test/mesh-bad.yaml
apiVersion: consul.hashicorp.com/v1alpha1
kind: Mesh
metadata:
  name: badmesh01
spec:
  tls:
    incoming:
      tlsMinVersion: TLSv1_1
