consul/enforce-min-tls-version/.chainsaw-test/mesh-good.yaml
apiVersion: consul.hashicorp.com/v1alpha1
kind: Mesh
metadata:
  name: goodmesh01
spec:
  tls:
    incoming:
      tlsMinVersion: TLSv1_2
