consul/enforce-min-tls-version/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-min-tls-version
status:
  ready: true
